--- a/tutorial-jquery-samples/testAjax.html
+++ b/tutorial-jquery-samples/testAjax.html
@@ -10,7 +10,10 @@
     Name: <input type="text" id="name" />
     <br>
     <input type="button" id="actionSaveStudent" name="Add" value="Add"/>
-
+    <br>
+    <input type="button" id="actionGetStudents" value="Get Students"/>
+    <br>
+    <textarea id="studentList"></textarea>
 </body>
 <script type="text/javascript">
 
@@ -28,21 +31,30 @@ $(document).ready(function(){
 
 		    success: function(data){
 		    	console.log(data);
+
 		    }
 
 });
 
+		
+
 	});
+
+	$("#actionGetStudents").click(function(){
+			$.ajax({
+				url : "http://localhost:8080/api/v1/student/",
+				type : "GET",
+				success: function(data){
+					console.log(data);
+					$("#studentList").val(JSON.stringify(data));
+
+			}
+
+			});
+		});
 });
 
-$.ajax({
-    url : "http://localhost:8080/api/v1/student/",
-    type : "GET",
-    success: function(data){
-    	console.log(data);
-    }
 
-});
 
 </script>
 </html>
